--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amar's Blog</title>
-    <style type="text/css" src="style.css"></style>
+    <style type="text/css" src="./style.css"></style>
 </head>
 
 <body>
     This is the sample page from my machine
     <p>This is some paragraph in red </p>
 
-    <script src="script.js" type="text/javascript"></script>
+    <script src="./script.js" type="text/javascript"></script>
 </body>
 
 </html>
