--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amar's Blog</title>
-    <style type="text/css" src="./style.css"></style>
+    <link type="text/css" src="./style.css"></link>
 </head>
 
 <body>
