--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     This is the sample page from my machine
     <p>This is some paragraph in red </p>
 
+    <hr> This is some text after the line
+
     <script src="./script.js" type="text/javascript"></script>
 </body>
 
