--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
 
     <hr> This is some text after the line
 
+    <br/>
+    And the world was suddenly enough ... 
+
+    <p>
+        <li>
+            <a href="https://handy-iguanadon-b8c.notion.site/A-canvas-of-thoughts-a3f79362768747ab8a7375b9d9e40cf3">
+                A Canvas of Thoughts
+            </a>
+        </li>
+    </p>
+
     <script src="./script.js" type="text/javascript"></script>
 </body>
 
