Adding the brown theme

--- a/index.html
+++ b/index.html
@@ -3,108 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amar's Blog</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f3f4f6;
-            padding: 20px;
-            margin: 0;
-        }
-
-        h1 {
-            text-align: center;
-            font-size: 2.5rem;
-            margin-bottom: 10px;
-            color: #1d4ed8;
-        }
-
-        .quote {
-            text-align: center;
-            font-style: italic;
-            color: #6b7280;
-            margin-bottom: 30px;
-            font-size: 1.25rem;
-        }
-
-        #placeholder-blogs {
-            margin-top: 20px;
-        }
-
-        .blog-container {
-            background-color: #ffffff;
-            border: 1px solid #d1d5db;
-            border-radius: 0.5rem;
-            padding: 16px;
-            margin-bottom: 16px;
-            border-top: 4px solid #1d4ed8;
-        }
-
-        .title-date-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .title-link {
-            font-size: 1.25rem;
-            font-weight: 600;
-            color: #1d4ed8;
-            text-decoration: none;
-        }
-
-        .title-link:hover {
-            text-decoration: underline;
-        }
-
-        .date-element {
-            font-size: 0.875rem;
-            color: #6b7280;
-            margin-left: 20px;
-        }
-
-        .tags-container {
-            margin-top: 8px;
-        }
-
-        .tag {
-            display: inline-block;
-            background-color: #1d4ed8;
-            color: #ffffff;
-            font-size: 0.75rem;
-            padding: 4px 8px;
-            border-radius: 9999px;
-            margin-right: 8px;
-            cursor: pointer;
-        }
-
-        .filter-container {
-            margin-bottom: 16px;
-        }
-
-        .filter-pill {
-            display: inline-block;
-            background-color: #e5e7eb;
-            color: #374151;
-            font-size: 0.75rem;
-            padding: 4px 12px;
-            border-radius: 9999px;
-            cursor: pointer;
-        }
-
-        .summary {
-            font-size: .8rem;
-            color: #646e80;
-            margin-top: 12px;
-        }
-
-        .separator {
-            border-bottom: 1px solid #d1d5db;
-            margin: 20px 0;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css"></link>
+    
 </head>
 
 <body>
@@ -117,148 +19,8 @@
     <!-- Blog Summaries Placeholder -->
     <div id="placeholder-blogs"></div>
 
-    <script>
-        // Define tags and myStructure
-        var tags = {
-            "1": "Logging Thoughts",
-            "2": "Software, data and applications",
-            "3": "Travel and Food",
-            "4": "Business"
-        };
-
-        var myStructure = [
-            {
-                id: "1",
-                title: "A Canvas of Thoughts",
-                tags: [1],
-                link: "https://handy-iguanadon-b8c.notion.site/A-canvas-of-thoughts-a3f79362768747ab8a7375b9d9e40cf3",
-                date: "August 11, 2024 9:05 PM",
-                summary: "Delve into the intricate patterns of the human mind, where thoughts flow like paint on a canvas. This post explores the complexity and beauty of introspection."
-            },
-            {
-                id: "2",
-                title: "The Future of Software",
-                tags: [2, 1],
-                link: "https://handy-iguanadon-b8c.notion.site/The-future-of-software-a3f79362768747ab8a7375b9d9e40cf4",
-                date: "July 28, 2024 4:22 PM",
-                summary: "An exploration of emerging trends in software development, focusing on new paradigms that are shaping the future of technology."
-            },
-            {
-                id: "3",
-                title: "A Culinary Journey",
-                tags: [3],
-                link: "https://handy-iguanadon-b8c.notion.site/A-culinary-journey-a3f79362768747ab8a7375b9d9e40cf5",
-                date: "June 15, 2024 2:15 PM",
-                summary: "Join me on a journey through flavors and cultures as I explore the world through food and travel, savoring each moment and taste."
-            },
-            {
-                id: "4",
-                title: "Building a Business",
-                tags: [4],
-                link: "https://handy-iguanadon-b8c.notion.site/Building-a-business-a3f79362768747ab8a7375b9d9e40cf6",
-                date: "May 22, 2024 11:05 AM",
-                summary: "Insights and strategies for aspiring entrepreneurs looking to build a successful business from the ground up."
-            }
-        ];
-
-        let selectedTag = null;
-
-        function generateBlogSummaries() {
-            const placeholder = document.getElementById("placeholder-blogs");
-            placeholder.innerHTML = ""; // Clear existing content
-
-            // Filtered articles
-            const filteredBlogs = selectedTag
-                ? myStructure.filter(blog => blog.tags.includes(selectedTag))
-                : myStructure;
-
-            filteredBlogs.forEach(blog => {
-                // Create container
-                const blogContainer = document.createElement("div");
-                blogContainer.className = "blog-container";
-
-                // Create title and date container
-                const titleDateContainer = document.createElement("div");
-                titleDateContainer.className = "title-date-container";
-
-                // Create title link
-                const titleLink = document.createElement("a");
-                titleLink.href = blog.link;
-                titleLink.innerText = blog.title;
-                titleLink.className = "title-link";
-                titleLink.target = "_blank"; // Open in a new tab
-
-                // Create date element
-                const dateElement = document.createElement("div");
-                dateElement.className = "date-element";
-                dateElement.innerText = new Date(blog.date).toLocaleDateString('en-US', {
-                    year: 'numeric',
-                    month: 'long',
-                    day: 'numeric'
-                });
-
-                // Append title and date to the title-date container
-                titleDateContainer.appendChild(titleLink);
-                titleDateContainer.appendChild(dateElement);
-
-                // Create tags container
-                const tagsContainer = document.createElement("div");
-                tagsContainer.className = "tags-container";
-                blog.tags.forEach(tagId => {
-                    const tag = document.createElement("span");
-                    tag.className = "tag";
-                    tag.innerText = tags[tagId];
-                    tag.onclick = () => {
-                        selectedTag = tagId;
-                        renderFilter();
-                        generateBlogSummaries();
-                    };
-                    tagsContainer.appendChild(tag);
-                });
-
-                // Create summary element
-                const summaryElement = document.createElement("p");
-                summaryElement.className = "summary";
-                summaryElement.innerText = blog.summary;
-
-                // Append elements to blog container
-                blogContainer.appendChild(titleDateContainer);
-                blogContainer.appendChild(tagsContainer);
-                blogContainer.appendChild(summaryElement);
-
-                // Append blog container to placeholder
-                placeholder.appendChild(blogContainer);
-
-                // Add a separator line between blog entries
-                const separator = document.createElement("div");
-                separator.className = "separator";
-                // placeholder.appendChild(separator);
-            });
-        }
-
-        function renderFilter() {
-            const filterContainer = document.getElementById("filter-container");
-            filterContainer.innerHTML = ""; // Clear existing content
-
-            if (selectedTag) {
-                const filterPill = document.createElement("div");
-                filterPill.className = "filter-pill";
-                filterPill.innerText = `${tags[selectedTag]} ×`;
-                filterPill.onclick = () => {
-                    selectedTag = null;
-                    renderFilter();
-                    generateBlogSummaries();
-                };
-                filterContainer.appendChild(filterPill);
-            }
-        }
-
-        // Call the function to generate summaries on page load
-        window.onload = () => {
-            renderFilter();
-            generateBlogSummaries();
-        };
-    </script>
+    <script src="./script.js"></script>
+    <script src="./data.js"></script>
 </body>
 
 </html>
