--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Amar's Blog</h1>
-    <p class="quote">"Exploring the depths of thought, code, and life."</p>
+    <p class="quote">"Exploring thought, code, and life."</p>
 
     <!-- Filter Container -->
     <div id="filter-container" class="filter-container"></div>
